# GeoWatch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  install.bat  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  run.bat  setup-micromamba.ps1  setup.ps1
.github/workflows/: ci.yml
configs/: default.yaml
configs/examples/: lahore_2018_summer.yaml  lahore_2020_summer.yaml  lahore_aoi.geojson  lahore_boundary.geojson  lahore_foundation.yaml  sample_aoi_file.yaml
configs/examples/lahore_boundary_shapefile/: lahore_boundary.dbf  lahore_boundary.shp  lahore_boundary.shx
configs/schemas/: pipeline.schema.json
scripts/: build_sample_aoi.py  regenerate_docs.py  run_lahore_ndvi_change.py  validate_project_outputs.py  verify_imports.py
src/geowatch/: __init__.py  __main__.py
src/geowatch/acquisition/: __init__.py  auth.py  catalog.py  download.py  http.py  models.py  pipeline.py  retry.py  selector.py  stac.py
src/geowatch/analytics/: __init__.py  change.py  classification.py  errors.py  indices.py  models.py  pipeline.py  thresholding.py
src/geowatch/application/: __init__.py  availability.py  boundaries.py  models.py  (+7 more)
tests/: __init__.py  conftest.py
tests/cli/: __init__.py  test_cli.py  test_wizard.py
tests/integration/: __init__.py  test_foundation_workflow.py  test_lahore_qc.py  test_professional_workflow.py
tests/unit/: __init__.py  test_config.py  test_import_order.py  test_initializer.py  test_logging.py  test_pipeline.py  test_validation.py
(+87 files in other folders)
