[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geowatch"
version = "0.2.0"
description = "Professional terminal GIS and satellite change-detection application."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GeoWatch Contributors" }]
dependencies = [
  "loguru>=0.7.2",
  "pydantic>=2.8",
  "PyYAML>=6.0.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "pyproj>=3.6",
  "shapely>=2.0",
  "scikit-learn>=1.5",
  "typer>=0.12.3",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "reportlab>=4.2",
  "Jinja2>=3.1",
  "XlsxWriter>=3.2",
  "planetary-computer>=1.0",
  "geopandas>=1.0",
  "Pillow>=10.4",
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3.10",
  "dask[array]>=2024.5",
]
ml = [
  "xgboost>=2.1",
]
dev = [
  "black>=24.4.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "types-PyYAML>=6.0.12",
]

[project.scripts]
geowatch = "geowatch.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
addopts = "--cov=geowatch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["src"]
